plugins {
    id 'java'
    id 'application'
}

allprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
        options.compilerArgs += ['--enable-preview']
    }
}
